hw12_13_14_15_calendar/deployments/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calendar-ingress
spec:
  rules:
    - host: calendar.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: calendar
                port:
                  number: 8080
    - host: rabbit.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
